--- a/calculator.html
+++ b/calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
     <div class="calculator">
@@ -25,5 +25,5 @@
             <button id="equal">=</button>
             <button id="clr">clr</button>
         </div>
-    <script src="script.js"></script>
+    <script src="calculator.js"></script>
 </body>
